--- a/logistics/aitesting/2/index.html
+++ b/logistics/aitesting/2/index.html
@@ -495,6 +495,121 @@
 
   <!-- Chat Widget Repremar -->
   <style>
+    /* --- CONTENEDOR GENERAL --- */
+    #chat-widget {
+      position: fixed;
+      bottom: 100px;
+      right: 25px;
+      width: min(400px, 90vw);
+      height: min(80vh, 640px);
+      background: #ffffff;
+      color: #333;
+      border-radius: 20px;
+      box-shadow: 0 6px 25px rgba(0, 0, 0, 0.4);
+      display: none;
+      flex-direction: column;
+      overflow: hidden;
+      z-index: 9998;
+      font-family: "OpenAI Sans", system-ui, sans-serif;
+      transform: scale(0.95);
+      opacity: 0;
+      transition: all 0.3s ease;
+    }
+
+    #chat-widget.open {
+      display: flex;
+      opacity: 1;
+      transform: scale(1);
+      animation: fadeIn 0.3s ease forwards;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(10px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* --- HEADER --- */
+    #chat-header {
+      background: linear-gradient(90deg, #3eb6aa, #2f9d91);
+      color: #fff;
+      padding: 12px 20px;
+      font-weight: 600;
+      font-size: 15px;
+    }
+
+    /* --- MENSAJES --- */
+    #chat-messages {
+      flex: 1;
+      padding: 12px;
+      overflow-y: auto;
+      font-size: 14px;
+      background: #f9f9f9;
+    }
+
+    .msg-user,
+    .msg-bot {
+      max-width: 85%;
+      padding: 10px 14px;
+      margin: 8px 0;
+      border-radius: 18px;
+      line-height: 1.4;
+      word-wrap: break-word;
+      animation: fadeIn 0.3s ease;
+    }
+
+    .msg-user {
+      background: #3eb6aa;
+      color: #fff;
+      margin-left: auto;
+      border-bottom-right-radius: 0;
+    }
+
+    .msg-bot {
+      background: #e6f5f3;
+      color: #222;
+      margin-right: auto;
+      border-bottom-left-radius: 0;
+    }
+
+    /* --- INPUT --- */
+    #chat-input {
+      display: flex;
+      border-top: 1px solid #ddd;
+      background: #fff;
+    }
+
+    #chat-input input {
+      flex: 1;
+      padding: 12px;
+      border: none;
+      outline: none;
+      background: transparent;
+      font-size: 14px;
+      color: #333;
+    }
+
+    #chat-input button {
+      background: #3eb6aa;
+      color: #fff;
+      border: none;
+      padding: 0 18px;
+      cursor: pointer;
+      font-size: 15px;
+      transition: background 0.3s;
+    }
+
+    #chat-input button:hover {
+      background: #2f9d91;
+    }
+
+    /* --- BURBUJA --- */
     #chat-bubble {
       position: fixed;
       bottom: 25px;
@@ -523,61 +638,50 @@
       fill: white;
     }
 
-    #chat-widget {
-      position: fixed;
-      bottom: 100px;
-      right: 25px;
-      width: 400px;
-      height: 500px;
-      background: #fff;
-      border-radius: 16px;
-      box-shadow: 0 6px 25px rgba(0, 0, 0, 0.4);
-      display: none;
-      flex-direction: column;
-      overflow: hidden;
-      z-index: 9999;
-      font-family: "OpenAI Sans", system-ui, sans-serif;
-    }
+    /* --- RESPONSIVE --- */
+    @media (max-width: 600px) {
+      #chat-widget {
+        bottom: 0;
+        right: 0;
+        width: 100vw;
+        height: 100vh;
+        border-radius: 0;
+      }
 
-    #chat-header {
-      background: #3eb6aa;
-      color: #fff;
-      padding: 12px 20px;
-      font-weight: 600;
-    }
+      #chat-header {
+        font-size: 16px;
+        padding: 10px;
+      }
 
-    #chat-messages {
-      flex: 1;
-      padding: 10px;
-      overflow-y: auto;
-      font-size: 14px;
-    }
+      #chat-messages {
+        font-size: 14px;
+        padding: 10px;
+      }
 
-    #chat-input {
-      display: flex;
-      border-top: 1px solid #ddd;
-    }
+      #chat-input input {
+        font-size: 14px;
+        padding: 10px;
+      }
 
-    #chat-input input {
-      flex: 1;
-      padding: 12px;
-      border: none;
-      outline: none;
-    }
+      #chat-input button {
+        font-size: 14px;
+        padding: 0 14px;
+      }
 
-    #chat-input button {
-      background: #3eb6aa;
-      color: #fff;
-      border: none;
-      padding: 0 16px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
+      #chat-bubble {
+        width: 55px;
+        height: 55px;
+        bottom: 15px;
+        right: 15px;
+      }
 
-    #chat-input button:hover {
-      background: #2f9d91;
+      #chat-bubble svg {
+        width: 24px;
+        height: 24px;
+      }
     }
   </style>
+
 
   <div id="chat-bubble">
     <svg viewBox="0 0 24 24">
@@ -613,7 +717,7 @@
       const text = input.value.trim();
       if (!text) return;
 
-      appendMessage("🧍", text);
+      appendMessage("", text);
       input.value = "";
 
       try {
@@ -634,11 +738,11 @@
 
         const data = await res.json();
 
-        appendMessage("🤖", "Mensaje recibido, procesando...");
+        appendMessage("", "Mensaje recibido, procesando...");
 
         // Si querés mostrar la respuesta del escenario Make:
         if (data?.result) {
-          appendMessage("🤖", data.result);
+          appendMessage("", data.result);
         }
 
       } catch (err) {
@@ -647,10 +751,16 @@
       }
     }
 
-    // Agregar mensaje al panel
     function appendMessage(author, text) {
       const div = document.createElement("div");
-      div.innerHTML = `<b>${author}</b> ${text}`;
+
+      if (author === "user" || author === "") {
+        div.className = "msg-user";
+      } else {
+        div.className = "msg-bot";
+      }
+
+      div.textContent = text;
       messages.appendChild(div);
       messages.scrollTop = messages.scrollHeight;
     }
