--- a/logistics/aitesting/2/index.html
+++ b/logistics/aitesting/2/index.html
@@ -682,21 +682,20 @@
     }
   </style>
 
-
-  <div id="chat-bubble">
-    <svg viewBox="0 0 24 24">
+  <div id="chat-bubble" aria-label="Abrir chat" aria-expanded="false">
+    <svg viewBox="0 0 24 24" role="img" aria-hidden="true">
       <path d="M20 2H4a2 2 0 0 0-2 2v18l4-4h14a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2z" />
     </svg>
   </div>
 
-  <div id="chat-widget">
+  <div id="chat-widget" aria-live="polite">
     <div id="chat-header">Repremar Virtual Assistant</div>
     <div id="chat-messages">
-      <div><b>🤖</b> Hola! Para iniciar, indique su usuario y contraseña del portal de tracking.</div>
+      <div class="msg-bot">Hola. Para iniciar, indique su usuario y contraseña del portal de tracking.</div>
     </div>
     <div id="chat-input">
-      <input id="chat-text" type="text" placeholder="Escriba su mensaje..." />
-      <button id="chat-send">Enviar</button>
+      <input id="chat-text" type="text" placeholder="Escriba su mensaje..." autocomplete="off" />
+      <button id="chat-send" type="button">Enviar</button>
     </div>
   </div>
 
@@ -707,9 +706,18 @@
     const input = document.getElementById("chat-text");
     const messages = document.getElementById("chat-messages");
 
-    // Alternar apertura del chat
-    bubble.addEventListener("click", () => {
-      widget.style.display = widget.style.display === "flex" ? "none" : "flex";
+    // Abrir/cerrar usando la clase .open (coincide con el CSS)
+    function toggleWidget(force) {
+      const willOpen = typeof force === "boolean" ? force : !widget.classList.contains("open");
+      widget.classList.toggle("open", willOpen);
+      bubble.setAttribute("aria-expanded", String(willOpen));
+      if (willOpen) input.focus();
+    }
+
+    bubble.addEventListener("click", () => toggleWidget());
+    // Cerrar con Esc cuando el widget está abierto
+    document.addEventListener("keydown", (e) => {
+      if (e.key === "Escape" && widget.classList.contains("open")) toggleWidget(false);
     });
 
     // Enviar mensaje al backend (Netlify Function)
@@ -717,60 +725,75 @@
       const text = input.value.trim();
       if (!text) return;
 
-      appendMessage("", text);
+      appendMessage("user", text);
       input.value = "";
+      sendBtn.disabled = true;
+
+      let typingEl = showTyping();
 
       try {
-        // 🔒 Enviar al backend seguro
         const res = await fetch("/.netlify/functions/send-to-make", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
-            "x-api-key": "59ebae58-c332-4993-84c9-153870ea38d3" // 🔒 tu clave pública interna
+            "x-api-key": "59ebae58-c332-4993-84c9-153870ea38d3"
           },
           body: JSON.stringify({ message: text }),
         });
 
+        hideTyping(typingEl);
+        sendBtn.disabled = false;
+
         if (!res.ok) {
-          appendMessage("⚠️", `Error: ${res.status} ${res.statusText}`);
+          appendMessage("bot", `Error: ${res.status} ${res.statusText}`);
           return;
         }
 
         const data = await res.json();
 
-        appendMessage("", "Mensaje recibido, procesando...");
-
-        // Si querés mostrar la respuesta del escenario Make:
-        if (data?.result) {
-          appendMessage("", data.result);
+        // data.result puede venir como texto plano o JSON serializado
+        let reply = "";
+        try {
+          const parsed = typeof data.result === "string" ? JSON.parse(data.result) : data.result;
+          reply = parsed?.reply || parsed?.message || parsed?.data || "";
+        } catch {
+          reply = data.result || "";
         }
-
+        appendMessage("bot", reply || "Mensaje recibido.");
       } catch (err) {
+        hideTyping(typingEl);
+        sendBtn.disabled = false;
         console.error("Error enviando mensaje:", err);
-        appendMessage("⚠️", "Ocurrió un error al enviar el mensaje.");
+        appendMessage("bot", "Ocurrió un error al enviar el mensaje.");
       }
     }
 
     function appendMessage(author, text) {
       const div = document.createElement("div");
-
-      if (author === "user" || author === "") {
-        div.className = "msg-user";
-      } else {
-        div.className = "msg-bot";
-      }
-
+      div.className = author === "user" ? "msg-user" : "msg-bot";
       div.textContent = text;
       messages.appendChild(div);
       messages.scrollTop = messages.scrollHeight;
     }
 
+    // Indicador simple "escribiendo..."
+    function showTyping() {
+      const el = document.createElement("div");
+      el.className = "msg-bot";
+      el.textContent = "Escribiendo…";
+      messages.appendChild(el);
+      messages.scrollTop = messages.scrollHeight;
+      return el;
+    }
+    function hideTyping(el) {
+      if (el && el.parentNode) el.parentNode.removeChild(el);
+    }
+
     // Eventos
     sendBtn.addEventListener("click", sendMessage);
-    input.addEventListener("keydown", e => {
-      if (e.key === "Enter") sendMessage();
-    });
+    input.addEventListener("keydown", (e) => { if (e.key === "Enter") sendMessage(); });
   </script>
+
 
 
 </body>
