--- a/logistics/aitesting/3/index.html
+++ b/logistics/aitesting/3/index.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/colors/green.css">
   <link rel="preload" href="./assets/css/fonts/urbanist.css" as="style" onload="this.rel='stylesheet'">
+  <script src="https://cdn.platform.openai.com/deployments/chatkit/chatkit.js"></script>
+
 </head>
 
 <body>
