--- a/logistics/aitesting/3/index.html
+++ b/logistics/aitesting/3/index.html
@@ -458,7 +458,7 @@
   <script src="./assets/js/plugins.js"></script>
   <script src="./assets/js/theme.js"></script>
   <!-- ChatKit Script -->
-  <script src="https://cdn.platform.openai.com/deployments/chatkit/chatkit.js" async></script>
+  <script src="https://cdn.platform.openai.com/deployments/chatkit/chatkit.js"></script>
 
   <!-- 💬 Burbuja del Chat -->
   <div id="chatkit-bubble">
