--- a/logistics/aitesting/3/index.html
+++ b/logistics/aitesting/3/index.html
@@ -404,49 +404,48 @@
     </div>
     <!-- /.content-wrapper -->
     <footer class="bg-dark text-inverse">
-      <div class="container py-13 py-md-15">
-        <div class="row gy-6 gy-lg-0">
-          <div class="col-md-4 col-lg-3">
-            <div class="widget">
-              <img class="mb-4" src="./assets/img/LogisticsHorizontalBlanco.png"
-                srcset="./assets/img/LogisticsHorizontalBlanco.png 2x" alt="" />
-              <p class="mb-4">©
-                <script>
-                  document.write(new Date().getUTCFullYear());
-                </script> Repremar Logistics. <br class="d-none d-lg-block" />All rights reserved.
-              </p>
-              <nav class="nav social social-white">
-                <a href="https://www.instagram.com/repremarlogistics/"><i class="uil uil-instagram"></i></a>
-                <a href="https://www.linkedin.com/company/repremar-logistics"><i class="uil uil-linkedin"></i></a>
-              </nav>
-            </div>
-          </div>
+  <div class="container py-13 py-md-15">
+    <div class="row gy-6 gy-lg-0">
 
-          <div class="col-md-4 col-lg-3">
-            <div class="widget">
-              <h4 class="widget-title text-white mb-3">Get in Touch</h4>
-              <address class="pe-xl-15 pe-xxl-17">Misiones 1372, 6th floor, Montevideo, Uruguay</address>
-              <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br />
-              <a href="tel:+59829169416">+598 2916 9416</a>
-            </div>
-          </div>
-
-          <div class="col-md-4 col-lg-3">
-            <div class="widget">
-              <h4 class="widget-title text-white mb-3">Learn More</h4>
-              <ul class="list-unstyled mb-0">
-                <li><a href="aboutLogistics.html">About Us</a></li>
-                <li><a href="projects.html">Projects</a></li>
-              </ul>
-            </div>
-          </div>
-
+      <div class="col-md-4 col-lg-3">
+        <div class="widget">
+          <img class="mb-4" src="./assets/img/LogisticsHorizontalBlanco.png"
+               srcset="./assets/img/LogisticsHorizontalBlanco.png 2x" alt="" />
+          <p class="mb-4">©
+            <script>
+              document.write(new Date().getUTCFullYear());
+            </script>
+            Repremar Logistics. <br class="d-none d-lg-block" />All rights reserved.
+          </p>
+          <nav class="nav social social-white">
+            <a href="https://www.instagram.com/repremarlogistics/"><i class="uil uil-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/repremar-logistics"><i class="uil uil-linkedin"></i></a>
+          </nav>
         </div>
-
       </div>
+
+      <div class="col-md-4 col-lg-3">
+        <div class="widget">
+          <h4 class="widget-title text-white mb-3">Get in Touch</h4>
+          <address class="pe-xl-15 pe-xxl-17">Misiones 1372, 6th floor, Montevideo, Uruguay</address>
+          <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br />
+          <a href="tel:+59829169416">+598 2916 9416</a>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-lg-3">
+        <div class="widget">
+          <h4 class="widget-title text-white mb-3">Learn More</h4>
+          <ul class="list-unstyled mb-0">
+            <li><a href="aboutLogistics.html">About Us</a></li>
+            <li><a href="projects.html">Projects</a></li>
+          </ul>
+        </div>
+      </div>
+
+    </div>
   </div>
-  </footer>
-  </div>
+</footer>
 
   <div class="progress-wrap">
     <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
